order config properties

--- a/src/main/resources/config-example.properties
+++ b/src/main/resources/config-example.properties
@@ -1,15 +1,14 @@
+backup.local.path=/backup/
+backup.file.retention.count=5
+mysql.host=localhost
+#mysql.port=3306  // 3306 is default
 mysql.user=root
 mysql.password=yourpassword
 mysql.databases=database1,database2,database3
-mysql.host=localhost
-mysql.port=3306
-backup.local.path=/backup/mysql
-nas.path=/mnt/nas/backup
-google.drive.folder.id=your-google-drive-folder-id
-google.service.account.key=/path/to/service-account-key.json
-
 ftp.server=localhost
 ftp.port=21
 ftp.user=user
 ftp.password=yourpassword
 ftp.remotePath=/
+google.drive.folder.id=your-google-drive-folder-id
+google.service.account.key=/path/to/service-account-key.json  // in resources
